@@ -62,17 +62,18 @@ DLFCN_INCFLAGS = @DLFCN_INCFLAGS@
 # Clean up INCFLAGS a bit if we are not compiling in a separate
 # directory.
 ifeq ($(srcdir),.)
-  TMP_IF_1 = -I. -I../src
+  TMP_IF_1 = -I.
 else
-  TMP_IF_1 = -I. -I$(srcdir) -I../src
+  TMP_IF_1 = -I. -I$(srcdir)
 endif
 ifeq ($(TOPDIR),$(top_srcdir))
   TMP_IF_2 = -I$(TOPDIR) -I$(TOPDIR)/liboctave -I$(TOPDIR)/src \
-	-I$(TOPDIR)/glob
+	-I$(TOPDIR)/glob -I$(TOPDIR)/libcruft/misc
 else
   TMP_IF_2 = -I$(TOPDIR) -I$(TOPDIR)/liboctave -I$(TOPDIR)/src \
-	-I$(TOPDIR)/glob -I$(top_srcdir) -I$(top_srcdir)/liboctave \
-	-I$(top_srcdir)/src -I$(top_srcdir)/glob
+	-I$(TOPDIR)/glob -I$(TOPDIR)/libcruft/misc -I$(top_srcdir) \
+	-I$(top_srcdir)/liboctave -I$(top_srcdir)/src \
+	-I$(top_srcdir)/glob -I$(top_srcdir)/libcruft/misc
 endif
 INCFLAGS = $(TMP_IF_1) $(TMP_IF_2) $(DLFCN_INCFLAGS)
 
